finished header BEM

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,27 @@
 <body>
     <header class="shadow_header">
         <div class="container ">
-            <nav class="headers_navigation">
-                <span><a href="./index.html" class="logo">WebStudio</a></span>
-                <div class="menu_navigation">
-                <ul class="links menu_list list">
+            <nav class="header__navigation">
+                <span><a href="./index.html" class="header__logo">WebStudio</a></span>
+                <div class="header__menu">
+                <ul class="links header__list list">
                     <li><a href="./index.html" class="header_link ">Estudio</a></li>
                     <li><a href="./portfolio.html" class="header_link current">Portafolio</a></li>
                     <li><a href="#" class="header_link">Contactos</a></li>
                 </ul>
             
-                <ul class="links menu_contact ">
-                    <li class="icon_contacts">
-                        <a class="email_contact" href="mailto:info@devstudio.com"> 
-                        <svg class="icon_sobre">
+                <ul class="links header__contact ">
+                    <li class="header__contact-list">
+                        <a class="header__email" href="mailto:info@devstudio.com"> 
+                        <svg class="header__sobre">
                         <use href="./images/contactos/symbol-defs.svg#icon-sobre"></use>
                     </svg>info@devstudio.com
                 </a>
                 </li>
                     <li >
-                    <li class="icon_contacts"> 
-                        <a class="cel_contact" href="tel:+525555296000">
-                        <svg class="icon_cel">
+                    <li class="header__contact-list"> 
+                        <a class="header__phone" href="tel:+525555296000">
+                        <svg class="header__cel">
                         <use  href="./images/contactos/symbol-defs.svg#icon-telfono-inteligente"></use>
                         </svg>+52 555 529 60 00
                         </a>
