--- a/index.html
+++ b/index.html
@@ -42,92 +42,92 @@
         </nav>
         </div>
     </header>
-    <main class="main__head ">
-        <section class="head_title bg_imagen ">
+    <main >
+        <section class="head__background head__background-imagen">
         <div class="container ">
-            <h1 class="main_title " >SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-            <button data-modal-open type="button" class="button_primary">Solicite nuestro servicio</button>
+            <h1 class="head__title " >SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+            <button data-modal-open type="button" class="head__button">Solicite nuestro servicio</button>
         </div>
         </section>
         <section>
         <div class="container">
             <div>
-            <ul class="about_list list">
+            <ul class="about__list list">
                 <li>
-                    <svg class="icon_about">
+                    <svg class="about__images">
                         <use href="./images/about/symbol-defs.svg#icon-Antena"></use>
                     </svg>
-                    <h3 class="about_item">Atencion a los detalles</h3>
-                    <p class="about_text about_container">Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.</p>
+                    <h3 class="about__title">Atencion a los detalles</h3>
+                    <p class="about__text about__container">Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.</p>
                 </li>
                 <li>
-                    <svg class="icon_about">
+                    <svg class="about__images">
                         <use href="./images/about/symbol-defs.svg#icon-reloj"></use>
                     </svg>
-                    <h3 class="about_item">Puntualidad</h3>
-                    <p class="about_text about_container">Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</p>
+                    <h3 class="about__title">Puntualidad</h3>
+                    <p class="about__text about__container">Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</p>
                 </li>
                 <li>
-                    <svg class="icon_about">
+                    <svg class="about__images">
                         <use href="./images/about/symbol-defs.svg#icon-diagrama"></use>
                     </svg>
-                    <h3 class="about_item ">Planificacion</h3>
-                    <p class="about_text about_container">Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
+                    <h3 class="about__title ">Planificacion</h3>
+                    <p class="about__text about__container">Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
                 </li>
                 <li>
-                    <svg class="icon_about">
+                    <svg class="about__images">
                         <use href="./images/about/symbol-defs.svg#icon-astronauta"></use>
                     </svg>
-                    <h3 class="about_item">Tecnologia moderna</h3>
-                    <p class="about_text about_container">Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
+                    <h3 class="about__title">Tecnologia moderna</h3>
+                    <p class="about__text about__container">Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
                 </li>
             </ul>
             </div>
         </div>
         </section>
-        <section class="main__services">
+        <section class="services">
         <div class="container">
-            <h2 class="headings_service list">A que nos dedicamos</h2>
+            <h2 class="services__title list">A que nos dedicamos</h2>
             <div class=" container">
-            <ul class="images_services list">
-                <li class="imagen_servicio">
+            <ul class="services__list list">
+                <li class="services__images">
                     <img src="./images/services/Service1.jpg" alt="servicios" width="373" height="324">
-                    <div class="services_text">APLICACIONES DE ESCRITORIO </div></li>
-                <li class="imagen_servicio"><img src="./images/services/Service2.jpg" alt="servicios" width="373" height="324">
-                    <div class="services_text">APLICACIONES MÓVILES </div></li>
-                <li class=""><img src="./images/services/Service3.jpg" alt="servicios" width="373" height="324">
-                    <div class="services_text">SOLUCIONES DE DISEÑO </div></li>
+                    <div class="services__text">APLICACIONES DE ESCRITORIO </div></li>
+                <li class="services__images"><img src="./images/services/Service2.jpg" alt="servicios" width="373" height="324">
+                    <div class="services__text">APLICACIONES MÓVILES </div></li>
+                <li class="services__images"><img src="./images/services/Service3.jpg" alt="servicios" width="373" height="324">
+                    <div class="services__text">SOLUCIONES DE DISEÑO </div></li>
             </ul> 
             </div>
         </div>
         </section>
-        <section class="main__team">
-        <div class="container images_team">
-            <h2 class="headings_team container">Nuestro Equipo</h2>
+        <section class="team">
+        <div class="team__cards">
+            <h2 class="team__title container">Nuestro Equipo</h2>
             <div>
-            <ul class="list shadow ">
-                <li class="target">
+            <ul class="list team__cards-shadow ">
+                <li class="team__card">
                 <img  src="./images/team/Andres_C.jpg" alt="Nuestro team" width="270" height="260">
-                <h3 class="job_name">Andres Cubo</h3>
-                <p class="job_title">Diseñador de Productos</p>
-                <ul class="container icon_svg ">
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                <h3 class="team__name">Andres Cubo</h3>
+                <p class="team__subtitle">Diseñador de Productos</p>
+                <ul class="container team__redes ">
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                         </svg>
                     </li>
@@ -136,29 +136,29 @@
             </ul>
             </div>
             <div>
-            <ul class="list shadow">
-                <li>
+            <ul class="list team__cards-shadow">
+                <li class="team__card">
                 <img src="./images/team/Carla_P.jpg" alt="Nuestro team" width="270">
-                <h3 class="job_name">Carla Palacios</h3>
-                <p class="job_title">Desarrolladora Frontend</p>
-                <ul class="container icon_svg ">
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                <h3 class="team__name">Carla Palacios</h3>
+                <p class="team__subtitle">Desarrolladora Frontend</p>
+                <ul class="container team__redes ">
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                         </svg>
                     </li>
@@ -167,29 +167,29 @@
             </ul>
             </div>
             <div>
-            <ul class="list shadow">
-                <li>
+            <ul class="list team__cards-shadow">
+                <li class="team__card">
                 <img src="./images/team/Mario_D.jpg" alt="nuestro team" width="270">
-                <h3 class="job_name">Mario Dorado</h3>
-                <p class="job_title">Marketing</p>
-                <ul class="container icon_svg ">
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>  
+                <h3 class="team__name">Mario Dorado</h3>
+                <p class="team__subtitle">Marketing</p>
+                <ul class="container team__redes ">
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>  
                         <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                         </svg>
                     </li>
@@ -198,29 +198,29 @@
             </ul>
             </div>
             <div>
-            <ul class="list shadow">
-                <li>
+            <ul class="list team__cards-shadow">
+                <li class="team__card">
                 <img src="./images/team/Pablo_M.jpg" alt="nuestro team" width="270">
-                <h3 class="job_name">Pablo Mijangos</h3>
-                <p class="job_title">Diseñador IU</p>
-                <ul class="container icon_svg ">
-                    <li class="bg_redes">
-                        <svg class="svg_redes"><a href="#"></a>
+                <h3 class="team__name">Pablo Mijangos</h3>
+                <p class="team__subtitle">Diseñador IU</p>
+                <ul class="container team__redes ">
+                    <li class="team__redes--fondo">
+                        <svg class="team__items"><a href="#"></a>
                         <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                         </svg> 
                     </li>
-                    <li class="bg_redes"><a href="#" ></a>
-                        <svg class="svg_redes">
+                    <li class="team__redes--fondo"><a href="#" ></a>
+                        <svg class="team__items">
                         <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                         </svg>
                     </li>
-                    <li class="bg_redes"><a href="#"></a>
-                        <svg class="svg_redes">
+                    <li class="team__redes--fondo"><a href="#"></a>
+                        <svg class="team__items">
                         <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </li>
-                    <li class="bg_redes"><a href="#" ></a>
-                        <svg class="svg_redes">
+                    <li class="team__redes--fondo"><a href="#" ></a>
+                        <svg class="team__items">
                         <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                         </svg>
                     </li>
@@ -232,36 +232,36 @@
         </section>
         <section>
         <div class="container">
-            <h2 class="headings_service list">Clientes Regulares</h2>
+            <h2 class="clientes__title list">Clientes Regulares</h2>
             <nav >
-            <ul class="container_clientes">
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+            <ul class="clientes__list">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-1" ></use>
                     </svg></a>
                 </li>
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-2" ></use>
                     </svg></a>
                 </li>
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-3" ></use>
                     </svg></a>
                 </li>
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-4" ></use>
                     </svg></a>
                 </li>
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-5" ></use>
                     </svg></a>
                 </li>
-                <li class="border_svg"><a href="#" class="clientes_links">
-                    <svg class="svg_cliente">
+                <li class="clientes__cards--border"><a href="#" class="clientes_links">
+                    <svg class="clientes__items">
                     <use href="./images/clientes/symbol-defs.svg#icon-cliente-6" ></use>
                     </svg></a>
                 </li>
