--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header__sombra">
         <div class="container ">
         <nav class="header__navigation">
-            <span><a href="./index.html" class="header__logo">WebStudio</a></span>
+            <span><a href="./index.html" class="logo">WebStudio</a></span>
             <div class="header__menu">
             <ul class="links header__list list">
                 <li><a href="./index.html" class="header_link current">Estudio</a></li>
@@ -270,49 +270,49 @@
         </div>
         </section>
         </main>
-    <footer class="main__footer">
+    <footer class="footer">
     <div class="container">
-        <div class="logo_footer">
-        <a href="#" class="header__logo logo_footer">WebStudio</a>
-        <h2 class="Contact_redes container">ENCUENTRENOS EN </h2>
-        <h2 class="footer_suscriptor container">SUSCRÍBASE AL BOLETIN INFORMATIVO </h2>
+        <div class="footer__logo">
+        <a href="#" class="logo ">WebStudio</a>
+        <h2 class="footer__redes container">ENCUENTRENOS EN </h2>
+        <h2 class="footer__suscriptor container">SUSCRÍBASE AL BOLETIN INFORMATIVO </h2>
         </div>
-        <address class="main__address">
-        <div class="container main__address">
-        <ul class="list container_address">
-            <li><a href="#" class="footer_address">Calz. Ticomán 500, Ciudad de México, CDMX, México</a></li>
-            <li><a href="info@example.com" class="footer_contact"> info@example.com</a></li>
-            <li><a href="tel:+525555296000"class="footer_contact"> +52 55 5529 6000</a></li>
+        <address>
+        <div class="container address">
+        <ul class="list footer__list">
+            <li><a href="#" class="footer__address">Calz. Ticomán 500, Ciudad de México, CDMX, México</a></li>
+            <li><a href="info@example.com" class="footer__contact"> info@example.com</a></li>
+            <li><a href="tel:+525555296000"class="footer__contact"> +52 55 5529 6000</a></li>
         </ul>
         <div>
-        <ul class="container footer_iconos ">
-            <li class="bg_footer">
-                <svg class="svg_foter"><a href="#"></a>  
+        <ul class="container footer__iconos-redes ">
+            <li class="footer__iconos-fondo">
+                <svg class="footer__iconos-items"><a href="#"></a>  
                 <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                 </svg>
             </li>
-            <li class="bg_footer">
-                <svg class="svg_foter"><a href="#"></a>
+            <li class="footer__iconos-fondo">
+                <svg class="footer__iconos-items"><a href="#"></a>
                 <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                 </svg>
             </li>
-            <li class="bg_footer">
-                <svg class="svg_foter"><a href="#"></a>
+            <li class="footer__iconos-fondo">
+                <svg class="footer__iconos-items"><a href="#"></a>
                 <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                 </svg>
             </li>
-            <li class="bg_footer">
-                <svg class="svg_foter"><a href="#"></a>
+            <li class="footer__iconos-fondo">
+                <svg class="footer__iconos-items"><a href="#"></a>
                 <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                 </svg>
             </li>
         </ul>
         </div>
-        <div class="footer_suscripcion">
-            <label for="email" class="footer_label" ></label>
-            <input type="email" name="email_footer" id="email" class="footer_email" placeholder="Correo electrónico">
-            <button type="submit" class="boton_footer">Suscríbase</button>
-            <svg class="footer_icon_suscrition" width="24" height="24"  >
+        <div class="footer__suscripcion-email">
+            <label for="email" class="footer__label" ></label>
+            <input type="email" name="email_footer" id="email" class="footer__email" placeholder="Correo electrónico">
+            <button type="submit" class="footer__button">Suscríbase</button>
+            <svg class="footer__suscripcion-item" width="24" height="24"  >
                 <use href="./images/redes/symbol-defs11.svg#icon-enviar-cono"  ></use>
             </svg>
 
@@ -330,34 +330,34 @@
             </svg>
             </button>
             <p class="modal_text">Deje sus datos, nos contactaremos con usted</p>
-            <div class="formulario">
+            <div class="modal__formulario">
                 <label for="user_name">Nombre</label>
-                <div class="input_group">
-                <input type="text" name="Nombre" id="user_name" class="input_modals">
+                <div class="modal__input-group">
+                <input type="text" name="Nombre" id="user_name" class="modal__inputs">
                 <svg class="modal_icons" width="18" height="18">
                     <use  href="./images/modal/symbol-defs1.svg#icon-persona-negra"></use>
                 </svg>
                 </div>
                 <label for="user_tel">Telefono</label>
-                <div class="input_group">
-                <input type="tel" name="user-phone" id="user_tel" class="input_modals" min="0" max="12">
+                <div class="modal__input-group">
+                <input type="tel" name="user-phone" id="user_tel" class="modal__inputs" min="0" max="12">
                 <svg class="modal_icons" width="18" height="18">
                     <use  href="./images/modal/symbol-defs1.svg#icon-telfono-negro"></use>
                 </svg><br>
                 </div>
                 <label for="user_email">E-mail</label><br>
-                <div class="input_group">
-                <input type="email" name="mail" id="user_email" class="input_modals">
+                <div class="modal__input-group">
+                <input type="email" name="mail" id="user_email" class="modal__inputs">
                 <svg class="modal_icons" width="18" height="18">
                     <use  href="./images/modal/symbol-defs1.svg#icon-correo-negro"></use>
                 </svg>
                 </div>
                 <label for="user_coments">Comentarios</label>
-                <textarea name="Comentarios" id="user_coments" class="input_coments" cols="" rows="" placeholder="Introduzca el texto"
+                <textarea name="Comentarios" id="user_coments" class="modal__input-coments" cols="" rows="" placeholder="Introduzca el texto"
                 ></textarea><br>
                 <label for="checkbox" class="check_text">Estoy de acuerdo con el boletín informativo y acepto los Términos y Condiciones</label><br>
                 <input type="checkbox" name="Nombre" id="checkbox" class="input_check">
-                <button type="submit" class="boton_modal">Enviar</button>
+                <button type="submit" class="modal__button">Enviar</button>
             </div>
         </div>
         <script src="./js/modal.js"></script>
