--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <header class="shadow_header">
         <div class="container ">
             <nav class="header__navigation">
-                <span><a href="./index.html" class="header__logo">WebStudio</a></span>
+                <span><a href="./index.html" class="logo">WebStudio</a></span>
                 <div class="header__menu">
                 <ul class="links header__list list">
                     <li><a href="./index.html" class="header_link ">Estudio</a></li>
@@ -134,49 +134,49 @@
             </div>
         </section>
     </main>
-    <footer class="main__footer">
+    <footer class="footer">
         <div class="container">
-            <div class="logo_footer">
-            <a href="#" class="logo logo_footer">WebStudio</a>
-            <h2 class="Contact_redes container">ENCUENTRENOS EN </h2>
-            <h2 class="footer_suscriptor container">SUSCRÍBASE AL BOLETIN INFORMATIVO </h2>
+            <div class="footer__logo">
+            <a href="#" class="logo ">WebStudio</a>
+            <h2 class="footer__redes container">ENCUENTRENOS EN </h2>
+            <h2 class="footer__suscriptor container">SUSCRÍBASE AL BOLETIN INFORMATIVO </h2>
             </div>
-            <address class="main__address">
-            <div class="container main__address">
-            <ul class="list container_address">
-                <li><a href="#" class="footer_address">Calz. Ticomán 500, Ciudad de México, CDMX, México</a></li>
-                <li><a href="info@example.com" class="footer_contact"> info@example.com</a></li>
-                <li><a href="tel:+525555296000"class="footer_contact"> +52 55 5529 6000</a></li>
+            <address>
+            <div class="container address">
+            <ul class="list footer__list">
+                <li><a href="#" class="footer__address">Calz. Ticomán 500, Ciudad de México, CDMX, México</a></li>
+                <li><a href="info@example.com" class="footer__contact"> info@example.com</a></li>
+                <li><a href="tel:+525555296000"class="footer__contact"> +52 55 5529 6000</a></li>
             </ul>
             <div>
-            <ul class="container footer_iconos ">
-                <li class="bg_footer">
-                    <svg class="svg_foter"><a href="#"></a>  
+            <ul class="container footer__iconos-redes ">
+                <li class="footer__iconos-fondo">
+                    <svg class="footer__iconos-items"><a href="#"></a>  
                     <use href="./images/redes/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                 </li>
-                <li class="bg_footer">
-                    <svg class="svg_foter"><a href="#"></a>
+                <li class="footer__iconos-fondo">
+                    <svg class="footer__iconos-items"><a href="#"></a>
                     <use href="./images/redes/symbol-defs.svg#icon-twitter" ></use>
                     </svg>
                 </li>
-                <li class="bg_footer">
-                    <svg class="svg_foter"><a href="#"></a>
+                <li class="footer__iconos-fondo">
+                    <svg class="footer__iconos-items"><a href="#"></a>
                     <use href="./images/redes/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </li>
-                <li class="bg_footer">
-                    <svg class="svg_foter"><a href="#"></a>
+                <li class="footer__iconos-fondo">
+                    <svg class="footer__iconos-items"><a href="#"></a>
                     <use href="./images/redes/symbol-defs.svg#icon-linkedin" ></use>
                     </svg>
                 </li>
             </ul>
             </div>
-            <div class="footer_suscripcion">
-                <label for="email" class="footer_label" ></label>
-                <input type="email" name="email_footer" id="email" class="footer_email" placeholder="Correo electrónico">
-                <button type="submit" class="boton_footer">Suscríbase</button>
-                <svg class="footer_icon_suscrition" width="24" height="24"  >
+            <div class="footer__suscripcion-email">
+                <label for="email" class="footer__label" ></label>
+                <input type="email" name="email_footer" id="email" class="footer__email" placeholder="Correo electrónico">
+                <button type="submit" class="footer__button">Suscríbase</button>
+                <svg class="footer__suscripcion-item" width="24" height="24"  >
                     <use href="./images/redes/symbol-defs11.svg#icon-enviar-cono"  ></use>
                 </svg>
     
