finished portfolio con BEM

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,91 +43,91 @@
             </div>
     </header>
     <main>
-        <section class="proyect_filter">
+        <section>
             <div class="container">
             <h1 class="portafolio">portfolio</h1>
-            <ul class="list_button container list">
-                <li><button type="button" class="button_item button_nav">Todos</button></li>
-                <li><button type="button" class="button_item button_nav">Sitios-web</button></li>
-                <li><button type="button" class="button_item button_nav">Aplicaciones</button></li>
-                <li><button type="button" class="button_item button_nav">Diseño</button></li>
-                <li><button type="button" class="button_item button_nav">Marketing</button></li>
+            <ul class="categories__filter container list">
+                <li><button type="button" class="categories__buttons ">Sitios-web</button></li>
+                <li><button type="button" class="categories__buttons ">Aplicaciones</button></li>
+                <li><button type="button" class="categories__buttons ">Diseño</button></li>
+                <li><button type="button" class="categories__buttons ">Todos</button></li>
+                <li><button type="button" class="categories__buttons ">Marketing</button></li>
             </ul>
             </div>
         </section>
         <section> 
             <div class="container">
-                <ul class="card_photo list ">
-                    <li class="border">
-                        <div class="tarjetas_container">
+                <ul class="cards__list list ">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto1.jpg" width="370" />
-                            <p class="card_text">Tecnoduck es una plataforma de distribución de coronavirus de última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los servidores seguros de la competencia.</p>
+                            <p class="card__text">Tecnoduck es una plataforma de distribución de coronavirus de última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los servidores seguros de la competencia.</p>
                         </div>
-                            <h3 class="proyect_name">Tecnoduck</h3>
+                            <h3 class="cards__name">Tecnoduck</h3>
                             <p class="categories">Sitio-Web</p>
                     </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img  src="./images/Portafolio/proyecto2.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Poster de Nueva Orleans vs Estrella Dorada</h3>
+                            <h3 class="cards__name">Poster de Nueva Orleans vs Estrella Dorada</h3>
                             <p class="categories">Diseño</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img  src="./images/Portafolio/proyecto3.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Restaurante Seafood</h3>
+                            <h3 class="cards__name">Restaurante Seafood</h3>
                             <p class="categories">Aplicaciones</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto4.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Proyecto Prime</h3>
+                            <h3 class="cards__name">Proyecto Prime</h3>
                             <p class="categories">Marketing</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img  src="./images/Portafolio/proyecto5.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Proyecto Cajas</h3>
+                            <h3 class="cards__name">Proyecto Cajas</h3>
                             <p class="categories">Aplicaciones</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto6.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">La inspiracion no tiene limites</h3>
+                            <h3 class="cards__name">La inspiracion no tiene limites</h3>
                             <p class="categories">Sitio-Web</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto7.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Edicion Limitada</h3>
+                            <h3 class="cards__name">Edicion Limitada</h3>
                             <p class="categories">Diseño</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto8.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Marketing LAB</h3>
+                            <h3 class="cards__name">Marketing LAB</h3>
                             <p class="categories">Marketing</p>
                         </li>
-                    <li class="border">
-                        <div class="tarjetas_container">
+                    <li class="cards__border">
+                        <div class="cards__images">
                             <img src="./images/Portafolio/proyecto9.jpg" width="370">
-                            <p class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
+                            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, illo, libero consequatur quasi iusto animi vero quisquam iste qui dicta, nihil facere repellendus quas aspernatur fuga quidem illum sit! </p>
                         </div>
-                            <h3 class="proyect_name">Negocio en crecimiento</h3>
+                            <h3 class="cards__name">Negocio en crecimiento</h3>
                             <p class="categories">Aplicaciones</p>
                         </li>
                 </ul>
