finished header con sass

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./sass/main.css">
 </head>
 <body>
-    <header class="header__sombra">
+    <header class="header">
         <div class="container ">
         <nav class="header__navigation">
             <span><a href="./index.html" class="logo">WebStudio</a></span>
@@ -30,7 +30,6 @@
                 </svg>info@devstudio.com
             </a>
             </li>
-                <li >
                 <li class="header__contact-list"> 
                     <a class="header__phone" href="tel:+525555296000">
                     <svg class="header__cel">
