finished seccions about and services

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <section>
         <div class="container">
-            <div>
+            <div class="about">
             <ul class="about__list list">
                 <li>
                     <svg class="about__images">
