se corrige la seccion del team

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         </section>
         <section class="team">
-        <div class="team__cards">
+        <div class="team__cards container">
             <h2 class="team__title container">Nuestro Equipo</h2>
             <div>
             <ul class="list team__cards-shadow ">
